--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-  <script src="./index.js"></script>
+  <div id="text"></div>
+  <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?5c6168dd6a444cd186fc15bfac1e02ec&onload=false" charset="utf-8"></script>
+  <script src="./index.ts"></script>
 </body>
 </html>
