Update TypeSquare script tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+<head>
+  <title>TypeSquare Example</title>
+  <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?5c6168dd6a444cd186fc15bfac1e02ec&amp;onload=false" charset="utf-8"></script>
+</head>
 <body>
   <div id="text"></div>
-  <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?5c6168dd6a444cd186fc15bfac1e02ec&onload=false" charset="utf-8"></script>
   <script src="./index.ts"></script>
 </body>
 </html>
